--- a/css/main.css
+++ b/css/main.css
@@ -373,11 +373,11 @@ input.search-form:hover {
 }
 
 #main-slider .carousel .carousel-content {
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 #main-slider .carousel .slide-margin{
-  margin-top: 140px;
+  margin-top: 100px;
 }
 
 #main-slider .carousel h2 {
@@ -2575,7 +2575,7 @@ section.template-wrapper {
 }*/
 .photo-container .photo h3 {
   position: absolute;
-  width: 300px;
+  width: 250px;
   bottom: 43px;
   background-color: black;
   color: white;
@@ -2594,7 +2594,7 @@ section.template-wrapper {
 }
 .photo-container .photo h4 {
   position: absolute;
-  width: 300px;
+  width: 250px;
   bottom: 11px;
   background-color: black;
   color: white;
@@ -2662,8 +2662,8 @@ section.template-wrapper {
 
 .photo-container .photo, .exec-content .photo{
   float:left;
-  height: 300px;
-  width:300px;
+  height: 250px;
+  width:250px;
   overflow:hidden;
   position:relative;
 }
@@ -2817,3 +2817,44 @@ div#execs {
     display: inline-block;
     vertical-align: middle;
    }
+   
+   .video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+.carousel-inner .slide1 h1, .carousel-inner .slide1 h2
+{
+	    color: rgb(70, 67, 68) !important;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+.carousel-inner .slide2 h1, .carousel-inner .slide2 h2
+{
+	    color: rgb(70, 67, 68) !important;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+#main-slider .carousel .slide1 
+{
+    margin-top: -33px;
+}
+#main-slider .carousel .slide2 
+{
+    margin-top: -33px;
+}
+.logo
+{
+	width:30px;
+}
