--- a/css/main.css
+++ b/css/main.css
@@ -534,7 +534,7 @@ input.search-form:hover {
 }
 
 #feature {
-  background: #ffffff;
+  background: #f2f2f2;
   padding-bottom: 40px;
 }
 
@@ -2553,7 +2553,7 @@ section.template-wrapper {
 }
 
 .photo-container {
-  width: 300px;
+  
   overflow: hidden;
   margin: 6px;
   display:inline-block;
